-Agregar libreria Swiperjs -Crear componentes para header y footer -Agregar estilos a header

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Home from '../components/Home.astro';
 ---
 
 <Layout title="CIARTEHC">
-	<main>
-		<h1>Página para CIARTECH</h1>
-	</main>
+	<Home/>
 </Layout>
