--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -58,3 +58,9 @@ footer .social-wrapper img {
 .logo {
     width: 250px;
 }
+
+.back-img {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
