--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,3 +1,19 @@
 .swiper-wrapper {
-    height: 800px;
+    height: 700px;
+}
+.swiper-slide {
+    display: grid;
+}
+.swiper-pagination-bullet {
+    background-color: white;
+    opacity: 1;
+    margin: 0 12px!important;
+    height: 10px;
+    width: 10px;
+}
+.swiper-pagination-horizontal {
+    bottom: 25px!important;
+}
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background-color: #B12028;
 }
