--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,26 +2,46 @@
 
 ---
 
-<footer>
-    <div>
-        <img class="logo" src="logo.png" alt="">
-        <div class="social-wrapper">
-            <img src="fb.svg" alt="">
+<footer class="p-4">
+    <div class="grid grid-cols-3 py-10">
+        <img class="logo self-center" src="logo.png" alt="">
+        <article class="social-wrapper flex items-center justify-center gap-20">
+            <img src="fb.svg" alt=""> <!-- hacer componente para link de redes -->
             <img src="ig.svg" alt="">
             <img src="mail.svg" alt="">
-        </div>
-        <article>
-            <strong>Teléfono</strong>
-            01 (341) 575 2222, extensión 46073
-            <strong>Dirección</strong>
-            Centro Universitario del Sur
-            Av. Enrique Arreola Silva No. 883, colonia centro
-            Edificio P-planta baja
-            Zapotlán el Grande, Jalisco, México 
+        </article>
+        <article class="text-right">
+            <strong class="block">Teléfono</strong>
+            <ul class="mb-4">
+                <li>
+                    01 (341) 575 2222
+                </li>
+                <li>
+                    extensión 46073
+                </li>
+            </ul>
+            <strong class="block">Dirección</strong>
+            <ul>
+                <li>
+                    Centro Universitario del Sur
+                </li>
+                <li>
+                    Av. Enrique Arreola Silva No. 883, colonia centro
+                </li>
+                <li>
+                    Edificio P-planta baja
+                </li>
+                <li>
+                    Zapotlán el Grande, Jalisco, México 
+                </li>
+            </ul>
         </article>
     </div>
-    <div class="copy">
+    <hr>
+    <p class="mt-2">
         Universidad de Guadalajara, Centro de Investigaciones en Artes, Humanidades y Comunicación
+    </p>
+    <p>
         2024 &copy; copyright
-    </div>
+    </p>
 </footer>
