crear seccion contacto y equipo ciartahc

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -38,10 +38,10 @@
         </article>
     </div>
     <hr>
-    <p class="mt-2">
+    <p class="mt-2 text-center">
         Universidad de Guadalajara, Centro de Investigaciones en Artes, Humanidades y Comunicación
     </p>
-    <p>
+    <p class="text-center">
         2024 &copy; copyright
     </p>
 </footer>
