--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -2,9 +2,17 @@
 import Header from "./Header.astro"
 import Footer from "./Footer.astro"
 import Carousel from "./Carousel.jsx"
+import QuienesSomos from "./QuienesSomos.astro"
+import MasSobreNosotros from "./MasSobreNosotros.astro"
+import Equipo from "./Equipo.astro"
+import Contacto from "./Contacto.astro"
 import '../styles/home.css'
 ---
 
 <Header/>
 <Carousel client:load />
+<QuienesSomos />
+<MasSobreNosotros />
+<Equipo />
+<Contacto />
 <Footer />
