--- a/src/components/MasSobreNosotros.astro
+++ b/src/components/MasSobreNosotros.astro
@@ -1,8 +1,9 @@
 ---
-
+import SectionsCarousel from "./SectionsCarousel"
 ---
 
-<section class="text-center">
+<section class="text-center max-w-[1300px] mx-auto p-4">
     <h1>Más sobre nosotros</h1>
     <!-- swiper -->
+    <SectionsCarousel client:load/>
 </section>
