change name of mail icon

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import SocialMediaIcon from "./SocialMediaIcon.astro"
 import Facebook from "../icons/Facebook.astro"
 import Instagram from "../icons/Instagram.astro"
-import Mail from "../icons/Mail.astro"
+import Mail from "../icons/mail.astro"
 import Youtube from "../icons/Youtube.astro"
 ---
 
