change sectionCarousel name to proyectsCarouse

--- a/src/components/MasSobreNosotros.astro
+++ b/src/components/MasSobreNosotros.astro
@@ -1,9 +1,8 @@
 ---
-import SectionsCarousel from "./SectionsCarousel"
+import ProyectsCarousel from "./ProyectsCarousel"
 ---
 
 <section class="text-center max-w-[1300px] mx-auto p-4">
     <h1>Más sobre nosotros</h1>
-    <!-- swiper -->
-    <SectionsCarousel client:load/>
-</section>
+    <ProyectsCarousel client:load/>
+</section> 
