--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,8 +7,8 @@
         <a href="/">
             <img class="logo" src="logo.png" alt="">
         </a>
-        <a href="">Artes, Humanidades y Desarrollo Cultural</a>
-        <a href="">Identidad Cultural y Comunicación</a>
-        <a href="">Procesos Socioculturales y Desarrollo Comunitario</a>
+        <a href="artes-humanidades">Artes, Humanidades y Desarrollo Cultural</a>
+        <a href="identidad-cultural">Identidad Cultural y Comunicación</a>
+        <a href="procesos-socioculturales">Procesos Socioculturales y Desarrollo Comunitario</a>
     </nav>
 </header>
