--- a/src/components/MasSobreNosotros.astro
+++ b/src/components/MasSobreNosotros.astro
@@ -2,7 +2,19 @@
 import ProyectsCarousel from "./ProyectsCarousel"
 ---
 
-<section class="text-center max-w-[1300px] mx-auto p-4">
-    <h1>Más sobre nosotros</h1>
-    <ProyectsCarousel client:load/>
+<section class="text-center mx-auto">
+    <h1 class="p-4">Difusión</h1>
+    <div class="max-full mt-10 flex align-center justify-between gap-4 min-h-[400px]">
+        <div class="w-1/2 bg-difusion rounded-r"></div>
+        <div class="w-1/2 p-4 flex flex-col items-center justify-center gap-4">
+            <a href="teatro" class="btn flex gap-1 items-center">
+                <img src="logo-teatro.png" alt="" width="30px">
+                Teatro
+            </a>
+            <a href="radio" class="btn flex gap-1 items-center">
+                <img src="logo-teatro.png" alt="" width="30px">
+                Radio
+            </a>
+        </div>
+    </div>
 </section> 
