-Cambiar estilos de header al componente -Cambiar posición de swiper

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,3 +12,25 @@
         <a href="procesos-socioculturales">Procesos Socioculturales y Desarrollo Comunitario</a>
     </nav>
 </header>
+
+
+<style>
+    header {
+        padding: 15px
+    }
+    header nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 10px;
+    }
+    header a {
+        text-align: center;
+        width: 200px;
+        color: #232943;
+        font-weight: 600;
+    }
+    header nav a:hover {
+        color: var(--text-hover-color)
+    }
+</style>
