cambiar estilos de header

--- a/src/components/Equipo.astro
+++ b/src/components/Equipo.astro
@@ -4,7 +4,7 @@ import Crew from "./Crew.astro"
 import EQUIPO from "../data/equipo.json"
 ---
 
-<section id="equipo-ciartehc" class="text-center max-w-[1300px] mx-auto p-4">
+<section id="equipo" class="text-center max-w-[1300px] mx-auto p-4">
     <h1>Equipo ciartehc</h1>
     <!-- usuario -->
     <div class="flex justify-between gap-4 flex-wrap">
