--- a/src/components/MasSobreNosotros.astro
+++ b/src/components/MasSobreNosotros.astro
@@ -2,7 +2,7 @@
 import ProyectsCarousel from "./ProyectsCarousel"
 ---
 
-<section class="text-center mx-auto">
+<section class="text-center mx-auto" id="difusion">
     <h1 class="p-4">Difusión</h1>
     <div class="max-full mt-10 flex align-center justify-between gap-4 min-h-[400px]">
         <div class="w-1/2 bg-difusion rounded-r"></div>
