--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,26 +7,52 @@
         <a href="/">
             <img class="logo" src="logo.png" alt="">
         </a>
-        <a href="artes-humanidades">Artes, Humanidades y Desarrollo Cultural</a>
+        <div class="w-[650px] max-w-[100%] flex gap-4 justify-between mb-[2px]">
+            <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="text-center inline-flex items-center relative" type="button">
+                Departamentos 
+                <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+                </svg>
+                <!-- Dropdown menu -->
+                <div id="dropdown" class="absolute top-10 z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-[400px] dark:bg-gray-700">
+                    <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
+                        <li>
+                            <a href="artes-humanidades" class="w-[100%] text-left block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Artes, Humanidades y Desarrollo Cultural</a>
+                        </li>
+                        <hr>
+                        <li>
+                            <a href="identidad-cultural" class="w-[100%] text-left block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Identidad Cultural y Comunicación</a>
+                        </li>
+                        <hr>
+                        <li>
+                            <a href="procesos-socioculturales" class="w-[100%] text-left block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Procesos Socioculturales y Comunicación</a>
+                        </li>
+                    </ul>
+                </div>
+            </button>
+            <a href="#productos">Productos</a>
+            <a href="#difusion">Difusión</a>
+            <a href="#equipo">Equipo</a>
+        </div>
+        <!-- <a href="artes-humanidades">Artes, Humanidades y Desarrollo Cultural</a>
         <a href="identidad-cultural">Identidad Cultural y Comunicación</a>
-        <a href="procesos-socioculturales">Procesos Socioculturales y Desarrollo Comunitario</a>
+        <a href="procesos-socioculturales">Procesos Socioculturales y Desarrollo Comunitario</a> -->
     </nav>
 </header>
 
 
 <style>
     header {
-        padding: 15px
+        padding: 15px 20px
     }
     header nav {
         display: flex;
-        align-items: center;
+        align-items: flex-end;
         justify-content: space-between;
         gap: 10px;
     }
-    header a {
+    header a:not(header #dropdown a), header button {
         text-align: center;
-        width: 200px;
         color: #232943;
         font-weight: 600;
     }
@@ -34,3 +60,14 @@
         color: var(--text-hover-color)
     }
 </style>
+
+<script>
+    // JavaScript para controlar el menú desplegable
+    document.getElementById('dropdownDefaultButton').addEventListener('mouseenter', function() {
+        document.getElementById('dropdown').classList.remove('hidden');
+    });
+
+    document.getElementById('dropdown').addEventListener('mouseleave', function() {
+        document.getElementById('dropdown').classList.add('hidden');
+    });
+</script>
