cambiar nombre componente MasSobreNosotros -> Difusion

--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -1,7 +1,7 @@
 ---
 import BannerCarousel from "./BannerCarousel.jsx"
 import QuienesSomos from "./QuienesSomos.astro"
-import MasSobreNosotros from "./MasSobreNosotros.astro"
+import Difusion from "./Difusion.astro"
 import Equipo from "./Equipo.astro"
 import Contacto from "./Contacto.astro"
 import '../styles/home.css'
@@ -9,6 +9,6 @@ import '../styles/home.css'
 
 <QuienesSomos />
 <BannerCarousel client:load />
-<MasSobreNosotros />
+<Difusion />
 <Equipo />
 <Contacto />
