--- a/src/components/Difusion.astro
+++ b/src/components/Difusion.astro
@@ -4,17 +4,22 @@ import ProyectsCarousel from "./ProyectsCarousel"
 
 <section class="text-center mx-auto" id="difusion">
     <h1 class="p-4">Difusión</h1>
-    <div class="max-full mt-10 flex align-center justify-between gap-4 min-h-[400px]">
-        <div class="w-1/2 bg-difusion rounded-r"></div>
-        <div class="w-1/2 p-4 flex flex-col items-center justify-center gap-4">
-            <a href="teatro" class="btn flex gap-1 items-center">
-                <img src="logo-teatro.png" alt="" width="30px">
-                Teatro
-            </a>
-            <a href="radio" class="btn flex gap-1 items-center">
-                <img src="logo-teatro.png" alt="" width="30px">
-                Radio
-            </a>
+    <div class="max-w-[1000px] mt-10 flex align-center justify-between gap-4 m-auto p-4">
+        <div class="w-1/2 flex flex-col items-center justify-center gap-4">
+            <div class="w-[400px] max-w-full flex flex-col gap-1 items-center rounded-xl p-[20px] bg-[#C9CBAA] hover:bg-[#91984C] hover:text-white text-2xl font-semibold"> <!-- cambiar a -->
+                <a href="teatro" class="flex items-center gap-2 w-full justify-evenly">
+                    <img src="logo-teatro.png" alt="" width="100px">
+                    Teatro
+                </a>
+            </div>
+        </div>
+        <div class="w-1/2 flex flex-col items-center justify-center gap-4">
+            <div class="w-[400px] max-w-full flex flex-col gap-1 items-center rounded-xl p-[20px] bg-[#FFC7CB] hover:bg-[#CC2936] hover:text-white text-2xl font-semibold"> <!-- cambiar a -->
+                <a href="radio" class="flex items-center gap-2 w-full justify-evenly">
+                    <img src="logo-teatro.png" alt="" width="100px">
+                    Radio
+                </a>
+            </div>
         </div>
     </div>
 </section> 
