--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,20 +9,23 @@ import Youtube from "../icons/Youtube.astro"
 <footer class="p-4">
     <div class="grid grid-cols-3 py-10">
         <img class="logo self-center" src="logo.png" alt="">
-        <article class="social-wrapper flex items-center justify-center gap-20">
-            <SocialMediaIcon href="https://www.facebook.com/CUSurUdeG">
-                <Facebook class="w-10" style="fill:white"/>
-            </SocialMediaIcon>
-            <SocialMediaIcon href="https://www.instagram.com/cusur_udeg/">
-                <Instagram class="w-10" style="fill:white"/>
-            </SocialMediaIcon>
-            <SocialMediaIcon href="www.google.com">
-                <Mail class="w-10" style="fill:white"/>
-            </SocialMediaIcon>
-            <SocialMediaIcon href="https://www.youtube.com/CUSurTelevision">
-                <Youtube class="w-10" style="fill:white"/>
-            </SocialMediaIcon>
-        </article>
+        <div>
+            <img src="logo_udg.png" alt="" class="w-[200px] m-auto mb-[50px]">
+            <article class="social-wrapper flex items-center justify-center gap-20">
+                <SocialMediaIcon href="https://www.facebook.com/CUSurUdeG">
+                    <Facebook class="w-10" style="fill:white"/>
+                </SocialMediaIcon>
+                <SocialMediaIcon href="https://www.instagram.com/cusur_udeg/">
+                    <Instagram class="w-10" style="fill:white"/>
+                </SocialMediaIcon>
+                <SocialMediaIcon href="www.google.com">
+                    <Mail class="w-10" style="fill:white"/>
+                </SocialMediaIcon>
+                <SocialMediaIcon href="https://www.youtube.com/CUSurTelevision">
+                    <Youtube class="w-10" style="fill:white"/>
+                </SocialMediaIcon>
+            </article>
+        </div>
         <article class="text-right">
             <strong class="block">Teléfono</strong>
             <ul class="mb-4">
@@ -55,6 +58,6 @@ import Youtube from "../icons/Youtube.astro"
         Universidad de Guadalajara, Centro de Investigaciones en Artes, Humanidades y Comunicación
     </p>
     <p class="text-center">
-        2024 &copy; copyright
+        &copy; copyright 2024
     </p>
 </footer>
