--- a/src/components/QuienesSomos.astro
+++ b/src/components/QuienesSomos.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section class="text-center max-w-[750px] mx-auto">
+<section class="text-center max-w-[750px] mx-auto" id="quienes-somos">
     <h1>¿Quiénes somos?</h1>
     <p class="mb-3 text-pretty">
         Espacio diseñado para realizar <strong>investigación de alto nivel</strong>, articulando esfuerzo en el eje de docencia a nivel pregrado y posgrado, a la vez que contribuirá al fortalecimiento de actividades de <strong>divulgación, extensión, vinculación y difusión.</strong>
