--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<header>
+<header class="sticky top-0 z-[99]">
     <nav>
         <a href="/">
             <img class="logo" src="logo.png" alt="">
@@ -43,7 +43,14 @@
 
 <style>
     header {
-        padding: 15px 20px
+        padding: 15px 20px 30px
+    }
+    header.scrolled {
+        background-color: #00A896;
+        box-shadow: 0 5px 10px rgb(0, 0, 0, 0.1)
+    }
+    header.scrolled a:not(header #dropdown a){
+        color: white;
     }
     header nav {
         display: flex;
@@ -55,6 +62,9 @@
         text-align: center;
         color: #232943;
         font-weight: 600;
+    }
+    header.scrolled button {
+        color: white
     }
     header nav a:hover {
         color: var(--text-hover-color)
@@ -70,4 +80,13 @@
     document.getElementById('dropdown').addEventListener('mouseleave', function() {
         document.getElementById('dropdown').classList.add('hidden');
     });
+
+    window.addEventListener('scroll', () => {
+        const header = document.querySelector('header')
+        if (window.scrollY > 50) {
+            header.classList.add('scrolled')
+        } else {
+            header.classList.remove('scrolled')
+        }
+    })
 </script>
