cambiar logo de boton de radio

--- a/src/components/Difusion.astro
+++ b/src/components/Difusion.astro
@@ -16,7 +16,7 @@ import ProyectsCarousel from "./ProyectsCarousel"
         <div class="w-1/2 flex flex-col items-center justify-center gap-4">
             <div class="w-[400px] max-w-full flex flex-col gap-1 items-center rounded-xl p-[20px] bg-[#FFC7CB] hover:bg-[#CC2936] hover:text-white text-2xl font-semibold"> <!-- cambiar a -->
                 <a href="radio" class="flex items-center gap-2 w-full justify-evenly">
-                    <img src="logo-teatro.png" alt="" width="100px">
+                    <img src="logo-radio.png" alt="" width="100px">
                     Radio
                 </a>
             </div>
