--- a/src/components/Difusion.astro
+++ b/src/components/Difusion.astro
@@ -14,8 +14,8 @@ import ProyectsCarousel from "./ProyectsCarousel"
             </div>
         </div>
         <div class="w-1/2 flex flex-col items-center justify-center gap-4">
-            <div class="w-[400px] max-w-full flex flex-col gap-1 items-center rounded-xl p-[20px] bg-[#FFC7CB] hover:bg-[#CC2936] hover:text-white text-2xl font-semibold"> <!-- cambiar a -->
-                <a href="radio" class="flex items-center gap-2 w-full justify-evenly">
+            <div class="w-[400px] max-w-full flex flex-col gap-1 items-center rounded-xl p-[20px] bg-[#FFC7CB] hover:bg-[#CC2936] hover:text-white text-2xl font-semibold" style="min-height: 146px"> <!-- cambiar a -->
+                <a href="radio" class="flex items-center gap-2 w-full justify-evenly" style="height: 100%">
                     <img src="logo-radio.png" alt="" width="100px">
                     Radio
                 </a>
