--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -73,20 +73,31 @@
 
 <script>
     // JavaScript para controlar el menú desplegable
-    document.getElementById('dropdownDefaultButton').addEventListener('mouseenter', function() {
-        document.getElementById('dropdown').classList.remove('hidden');
-    });
-
-    document.getElementById('dropdown').addEventListener('mouseleave', function() {
-        document.getElementById('dropdown').classList.add('hidden');
-    });
+    let dropdownButton = document.getElementById('dropdownDefaultButton')
+    let dropdown = document.getElementById('dropdown')
+    if (dropdownButton ) {
+            dropdownButton.addEventListener('mouseenter', function() {
+                if (dropdown) {
+                    dropdown.classList.remove('hidden');
+                }
+            })
+    }
+    if (dropdown) {
+        dropdown.addEventListener('mouseleave', function() {
+            if (dropdown){
+                dropdown.classList.add('hidden');
+            }
+        });
+    }
 
     window.addEventListener('scroll', () => {
         const header = document.querySelector('header')
-        if (window.scrollY > 50) {
-            header.classList.add('scrolled')
-        } else {
-            header.classList.remove('scrolled')
+        if (header) {
+            if (window.scrollY > 50) {
+                header.classList.add('scrolled')
+            } else {
+                header.classList.remove('scrolled')
+            }
         }
     })
 </script>
