cambiar links de contacto en footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,13 +12,13 @@ import Youtube from "../icons/Youtube.astro"
         <div>
             <img src="logo_udg.png" alt="" class="w-[200px] m-auto mb-[50px]">
             <article class="social-wrapper flex items-center justify-center gap-20">
-                <SocialMediaIcon href="https://www.facebook.com/CUSurUdeG">
+                <SocialMediaIcon href="https://www.facebook.com/companiadeteatro.delcusur">
                     <Facebook class="w-10" style="fill:white"/>
                 </SocialMediaIcon>
-                <SocialMediaIcon href="https://www.instagram.com/cusur_udeg/">
+                <SocialMediaIcon href="https://www.instagram.com/ctcusur/">
                     <Instagram class="w-10" style="fill:white"/>
                 </SocialMediaIcon>
-                <SocialMediaIcon href="www.google.com">
+                <SocialMediaIcon href="Jorge.martinez@cusur.udg.mx">
                     <Mail class="w-10" style="fill:white"/>
                 </SocialMediaIcon>
                 <SocialMediaIcon href="https://www.youtube.com/CUSurTelevision">
