--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -72,32 +72,16 @@
 </style>
 
 <script>
-    // JavaScript para controlar el menú desplegable
-    let dropdownButton = document.getElementById('dropdownDefaultButton')
-    let dropdown = document.getElementById('dropdown')
-    if (dropdownButton ) {
-            dropdownButton.addEventListener('mouseenter', function() {
-                if (dropdown) {
-                    dropdown.classList.remove('hidden');
-                }
-            })
-    }
-    if (dropdown) {
-        dropdown.addEventListener('mouseleave', function() {
-            if (dropdown){
-                dropdown.classList.add('hidden');
-            }
-        });
-    }
+    document.getElementById('dropdownDefaultButton')?.addEventListener('mouseenter', () => {
+        document.getElementById('dropdown')?.classList.remove('hidden')
+    })
+
+    document.getElementById('dropdown')?.addEventListener('mouseleave', () => {
+        document.getElementById('dropdown')?.classList.add('hidden')
+    })
 
     window.addEventListener('scroll', () => {
         const header = document.querySelector('header')
-        if (header) {
-            if (window.scrollY > 50) {
-                header.classList.add('scrolled')
-            } else {
-                header.classList.remove('scrolled')
-            }
-        }
+        header && (window.scrollY > 50 ? header.classList.add('scrolled') : header.classList.remove('scrolled'))
     })
 </script>
