agregar avances menores

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,16 +12,16 @@ import Youtube from "../icons/Youtube.astro"
         <div>
             <img src="logo_udg.png" alt="" class="w-[200px] m-auto mb-[50px]">
             <article class="social-wrapper flex items-center justify-center gap-20">
-                <SocialMediaIcon href="https://www.facebook.com/companiadeteatro.delcusur">
+                <SocialMediaIcon href="https://www.facebook.com/profile.php?id=61556405097413">
                     <Facebook class="w-10" style="fill:white"/>
                 </SocialMediaIcon>
                 <SocialMediaIcon href="https://www.instagram.com/ctcusur/">
                     <Instagram class="w-10" style="fill:white"/>
                 </SocialMediaIcon>
-                <SocialMediaIcon href="Jorge.martinez@cusur.udg.mx">
+                <SocialMediaIcon href="ciartehc@cusur.udg.mx">
                     <Mail class="w-10" style="fill:white"/>
                 </SocialMediaIcon>
-                <SocialMediaIcon href="https://www.youtube.com/CUSurTelevision">
+                <SocialMediaIcon href="https://www.youtube.com/channel/UCsl8ULmX_tJrp6LEJq4v8hg">
                     <Youtube class="w-10" style="fill:white"/>
                 </SocialMediaIcon>
             </article>
