--- a/src/components/Teatro.astro
+++ b/src/components/Teatro.astro
@@ -1,1 +1,90 @@
-<h1>Teatro</h1>
+<!-- imagen de compañia de teatro -->
+<div class="bg-center bg-cover bg-teatro" style="height: 500px"></div>
+<section class="p-4 max-w-[800px] m-auto text-center">
+    <h1 class="p-4 text-center">Compañia de teatro Centro Universitario del Sur</h1>
+    <p class="mb-4">
+        Los antecedentes de esta Compañía de Teatro del Centro Universitario del Sur se remontan al 13 de junio de 2011, cuando la <strong>Dra. Rosa Elena Arellano Montoya</strong> inició un taller de teatro con 8 estudiantes de la licenciatura en Periodismo. Dado que la Dra. Arellano se encontraba adscrita en ese momento al Departamento de Cultura, Arte y Desarrollo Humano, fue en éste donde se ubicó el incipiente grupo de teatro. Cabe mencionar que, desde el principio, la concepción que tenía Rosa Arellano era conformar un proyecto teatral que pudiera cubrir indicadores de docencia, extensión, investigación y vinculación.
+    </p>
+    <p class="mb-4">
+        En el año del 2012 las autoridades del Centro Universitario del Sur de la Universidad de Guadalajara acordaron en el Concejo de Centro Universitario asignar un presupuesto de $60,000.00 pesos mexicanos al grupo de teatro, a partir de ese momento se le otorgó el nombre de <strong>“Compañía de Teatro del CUSur”</strong> (CTC) y se estableció que estuviera adscrita a la Coordinación de Extensión con la intención de fortalecer la oferta de Talleres de Formación Integral.
+    </p>
+    <p class="mb-4">
+        La CTC desde el 2016 en su quinto aniversario, tomando en cuenta que su inicio fue en 2011 como taller teatral, generó el primer <strong>“Encuentro Teatro Sur Zapotlán”</strong> y creó el <strong>“Premio Nacional de Dramaturgia Universitaria Hugo Salcedo”</strong>, esto como resultado del proyecto ejecutivo de la Maestría en Gestión y Desarrollo Cultural cursada por <strong>Óscar Rodríguez</strong>, director de la CTC entre el 2017 y el 2019. 
+    </p>
+    <h2 class="text-left mb-4 mt-20">Lineas de trabajo</h2>
+    
+    <details>
+        <summary>
+            <h3>Teatro por teatro</h3>
+        </summary>
+        <p>
+            Acerca a los participantes al teatro como forma de vida, por lo que viven la experiencia de la producción escénica desde sus diferentes facetas, se participa en encuentros y festivales y se realizan tanto funciones aisladas como temporadas.
+        </p>
+    </details>
+    <hr>
+    <details>
+        <summary>
+            <h3>Identidad y patrimonio cultural</h3>
+        </summary>
+        <p>
+            Reforzar la identidad cultural mexicana, con énfasis en la región Sur de Jalisco, a través de la puesta en escena de textos de dramaturgos nacidos en ella.
+        </p>
+    </details>
+    <hr>
+    <details>
+        <summary>
+            <h3>Intervención social y comunitaria</h3>
+        </summary>
+        <p>
+            A esta línea se adscriben los montajes asociados a proyectos de intervención directa en la comunidad.
+        </p>
+    </details>
+    <hr>
+    <details>
+        <summary>
+            <h3>Investigación-creación-colectiva</h3>
+        </summary>
+        <p>
+            En 2017, la Compañía de Teatro del CUSur entró en contacto con la Red Latinoamericana de Creación e Investigación Teatral Universitaria (CITU), en la cual participan representantes de 7 universidades. Las principales propuestas de esta línea de trabajo son la actualización permanente y la exploración de las nuevas teatralidades; el primer montaje realizado en atención a esto último fue Sara era su nombre, basado en El viaje de los cantores, de Hugo Salcedo. En diciembre de 2018, se inició el trabajo en esta línea con la obra Adictos anónimos, de Luis Mario Moncada con la adaptación de Joseph Meza y Oswaldo Hernández, ambos montajes están bajo la dirección de Rosy Arellano.
+        </p>
+    </details>
+    <hr>
+</section>
+
+<style>
+    h2 {
+        margin-top: 150px;
+    }
+    section {
+        margin: 50px auto 200px;
+    }
+    summary {
+        position: relative;
+    }
+    details > summary::-webkit-details-marker {
+        display: none;
+    }
+    summary::after {
+        content: '+';
+        position: absolute;
+        right: 10px;
+        top: 30px;
+    }
+    details[open] > summary::after {
+        content: '-';
+    }
+
+    details h3 {
+        padding: 30px 0;
+    }
+    details > summary {
+        list-style-type: none;
+    }
+    details p {
+        margin-bottom: 30px;
+    }
+    summary h3, details p {
+        text-align: left;
+    }
+    
+</style>
