--- a/src/components/Difusion.astro
+++ b/src/components/Difusion.astro
@@ -4,21 +4,39 @@ import ProyectsCarousel from "./ProyectsCarousel"
 
 <section class="text-center mx-auto" id="difusion">
     <h1 class="p-4">Difusión</h1>
-    <div class="max-w-[1000px] mt-10 flex align-center justify-between gap-4 m-auto p-4">
-        <div class="w-1/2 flex flex-col items-center justify-center gap-4">
-            <div class="w-[400px] max-w-full flex flex-col gap-1 items-center rounded-xl p-[20px] bg-[#C9CBAA] hover:bg-[#91984C] hover:text-white text-2xl font-semibold"> <!-- cambiar a -->
-                <a href="teatro" class="flex items-center gap-2 w-full justify-evenly">
-                    <img src="logo-teatro.png" alt="" width="100px">
-                    Teatro
-                </a>
+    <div class="max-w-[800px] mt-10 m-auto p-4">
+        <div class="grid grid-cols-1 md:grid-cols-2 text-center gap-5">
+            <div class="flex justify-center gap-4">
+                <div class="w-[400px] max-w-full flex flex-col gap-1 items-center rounded-xl p-[20px] bg-[#C9CBAA] hover:bg-[#91984C] hover:text-white text-2xl font-semibold" style="transition: .5s"> <!-- cambiar a -->
+                    <a href="teatro" class="flex items-center gap-2 w-full justify-evenly">
+                        <img src="logo-teatro.png" alt="" width="100px">
+                        Teatro
+                    </a>
+                </div>
             </div>
-        </div>
-        <div class="w-1/2 flex flex-col items-center justify-center gap-4">
-            <div class="w-[400px] max-w-full flex flex-col gap-1 items-center rounded-xl p-[20px] bg-[#FFC7CB] hover:bg-[#CC2936] hover:text-white text-2xl font-semibold" style="min-height: 146px"> <!-- cambiar a -->
-                <a href="radio" class="flex items-center gap-2 w-full justify-evenly" style="height: 100%">
-                    <img src="logo-radio.png" alt="" width="100px">
-                    Radio
-                </a>
+            <div class="flex justify-center gap-4">
+                <div class="w-[400px] max-w-full flex flex-col gap-1 items-center rounded-xl p-[20px] bg-[#FFC7CB] hover:bg-[#CC2936] hover:text-white text-2xl font-semibold" style="min-height: 146px; transition: .5s"> <!-- cambiar a -->
+                    <a href="radio" class="flex items-center gap-2 w-full justify-evenly" style="height: 100%">
+                        <img src="logo-radio.png" alt="" width="100px">
+                        Radio
+                    </a>
+                </div>
+            </div>
+            <div class="flex justify-center gap-4">
+                <div class="w-[400px] max-w-full flex gap-1 items-center rounded-xl p-[20px] bg-[#FFC7CB] hover:bg-[#CC2936] hover:text-white text-2xl font-semibold" style="min-height: 146px; transition: .5s"> <!-- cambiar a -->
+                    <a href="http://www.cusur.udg.mx/es/ciartehc/publicaciones" target="_blank" class="flex items-center gap-2 w-full justify-evenly" style="height: 100%">
+                        <img src="logo-radio.png" alt="" width="100px">
+                        Publicaciones 
+                    </a>
+                </div>
+            </div>
+            <div class="flex justify-center gap-4">
+                <div class="w-[400px] max-w-full flex gap-1 items-center rounded-xl p-[20px] bg-[#FFC7CB] hover:bg-[#CC2936] hover:text-white text-2xl font-semibold" style="min-height: 146px; transition: .5s"> <!-- cambiar a -->
+                    <a href="radio" class="flex items-center gap-2 w-full justify-evenly" style="height: 100%">
+                        <img src="logo-radio.png" alt="" width="100px">
+                        Audiovisual
+                    </a>
+                </div>
             </div>
         </div>
     </div>
