--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,15 +1,17 @@
 ---
+import Hamburger from "./Hamburger.astro"
+
 
 ---
 
-<header class="sticky top-0 z-[99]">
+<header class="sticky top-0 z-[99]" style="transition: .5s;">
     <nav>
         <a href="/">
             <img class="logo" src="logo.png" alt="">
         </a>
-        <div class="w-[650px] max-w-[100%] flex gap-4 justify-between mb-[2px]">
-            <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="text-center inline-flex items-center relative" type="button">
-                Departamentos 
+        <div class="md:max-w-full  md:w-[550px] flex gap-4 justify-between mb-[2px]">
+            <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="text-center items-center relative hidden md:inline-flex" type="button">
+                Líneas de investigación 
                 <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
                 </svg>
@@ -25,18 +27,16 @@
                         </li>
                         <hr>
                         <li>
-                            <a href="procesos-socioculturales" class="w-[100%] text-left block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Procesos Socioculturales y Comunicación</a>
+                            <a href="procesos-socioculturales" class="w-[100%] text-left block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Procesos Socioculturales y desarrollo Comunitario</a>
                         </li>
                     </ul>
                 </div>
             </button>
-            <a href="#productos">Productos</a>
-            <a href="#difusion">Difusión</a>
-            <a href="#equipo">Equipo</a>
+            <a href="/productos" class="hidden md:block">Productos</a>
+            <a href="#difusion" class="hidden md:block">Difusión</a>
+            <a href="#equipo" class="hidden md:block">Equipo</a>
         </div>
-        <!-- <a href="artes-humanidades">Artes, Humanidades y Desarrollo Cultural</a>
-        <a href="identidad-cultural">Identidad Cultural y Comunicación</a>
-        <a href="procesos-socioculturales">Procesos Socioculturales y Desarrollo Comunitario</a> -->
+        <Hamburger />
     </nav>
 </header>
 
@@ -56,7 +56,7 @@
         display: flex;
         align-items: flex-end;
         justify-content: space-between;
-        gap: 10px;
+        gap: 50px;
     }
     header a:not(header #dropdown a), header button {
         text-align: center;
@@ -82,6 +82,6 @@
 
     window.addEventListener('scroll', () => {
         const header = document.querySelector('header')
-        header && (window.scrollY > 50 ? header.classList.add('scrolled') : header.classList.remove('scrolled'))
+        header && (window.scrollY > 40 ? header.classList.add('scrolled') : header.classList.remove('scrolled'))
     })
 </script>
