--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -19,5 +19,20 @@
     background-color: #B12028;
 }
 .swiper-button-next, .swiper-button-prev {
+    display: block;
     color: #B12028
+}
+.swiper-button-next {
+    transform: rotate(180deg);
+}
+.swiper-button-next::after, .swiper-button-prev::after{
+    content: '';
+    display: block;
+    background-image: url('arrow.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #F5D190;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
 }
